@@ -21,10 +21,14 @@ import javax.sound.sampled.SourceDataLine;
 import javax.sound.sampled.spi.AudioFileReader;
 import javax.sound.sampled.spi.FormatConversionProvider;
 
+import vavi.util.Debug;
+import vavi.util.properties.annotation.Property;
+import vavi.util.properties.annotation.PropsEntity;
+
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
-import vavi.util.Debug;
 
 import static org.junit.jupiter.api.Assertions.assertTrue;
 import static vavi.sound.SoundUtil.volume;
@@ -37,17 +41,37 @@ import static vavix.util.DelayedWorker.later;
  * @author <a href="mailto:umjammer@gmail.com">Naohide Sano</a> (umjammer)
  * @version 0.00 2023/05/31 umjammer initial version <br>
  */
+@PropsEntity(url = "file:local.properties")
 class Lc3FormatConversionProviderTest {
 
+    static boolean localPropertiesExists() {
+        return Files.exists(Paths.get("local.properties"));
+    }
+
     static final long time;
-    static final double volume;
 
     static {
         time = System.getProperty("vavi.test", "").equals("ide") ? 1000 * 1000 : 10 * 1000;
-        volume = Double.parseDouble(System.getProperty("vavi.test.volume",  "0.2"));
     }
 
-    static final String inFile = "/test.lc3";
+    @Property(name = "lc3file")
+    String lc3 = "src/test/resources/test.lc3"; // TODO google engine cannot handle this file bec this is 44100hz
+
+    @Property(name = "vavi.test.volume")
+    double volume = 0.2;
+
+    @Property
+    boolean google;
+
+    @BeforeEach
+    void setup() throws Exception {
+        if (localPropertiesExists()) {
+            PropsEntity.Util.bind(this);
+        }
+
+        if (google) System.setProperty(Lc3FormatConversionProvider.ENGINE_KEY, "true");
+Debug.println("volume: " + volume + ", google: " + System.getProperty(Lc3FormatConversionProvider.ENGINE_KEY, "false"));
+    }
 
     @Test
     void testX() throws Exception {
@@ -75,16 +99,16 @@ System.err.println(spi);
     @Test
     @DisplayName("directly")
     void test0() throws Exception {
-
-        Path path = Paths.get(Lc3FormatConversionProviderTest.class.getResource(inFile).toURI());
+Debug.print(lc3);
+        Path path = Path.of(lc3);
         AudioInputStream sourceAis = new Lc3AudioFileReader().getAudioInputStream(new BufferedInputStream(Files.newInputStream(path)));
 
         AudioFormat inAudioFormat = sourceAis.getFormat();
 Debug.println("IN: " + inAudioFormat);
         AudioFormat outAudioFormat = new AudioFormat(
-            44100,
+            sourceAis.getFormat().getSampleRate(),
             16,
-            2,
+            sourceAis.getFormat().getChannels(),
             true,
             false);
 Debug.println("OUT: " + outAudioFormat);
@@ -116,16 +140,16 @@ Debug.println("OUT: " + outAudioFormat);
     @Test
     @DisplayName("via spi")
     void test1() throws Exception {
-
-        Path path = Paths.get(Lc3FormatConversionProviderTest.class.getResource(inFile).toURI());
+Debug.print(lc3);
+        Path path = Path.of(lc3);
         AudioInputStream sourceAis = AudioSystem.getAudioInputStream(new BufferedInputStream(Files.newInputStream(path)));
 
         AudioFormat inAudioFormat = sourceAis.getFormat();
 Debug.println("IN: " + inAudioFormat);
         AudioFormat outAudioFormat = new AudioFormat(
-            44100,
+            sourceAis.getFormat().getSampleRate(),
             16,
-            2,
+            sourceAis.getFormat().getChannels(),
             true,
             false);
 Debug.println("OUT: " + outAudioFormat);
@@ -157,7 +181,7 @@ Debug.println("OUT: " + outAudioFormat);
     @Test
     @Disabled("TODO? java.lang.IllegalArgumentException: invalid frame size: NOT_SPECIFIED")
     void test3() throws Exception {
-        AudioInputStream ais = AudioSystem.getAudioInputStream(Lc3FormatConversionProviderTest.class.getResourceAsStream(inFile));
+        AudioInputStream ais = AudioSystem.getAudioInputStream(Path.of(lc3).toFile());
         Clip clip = AudioSystem.getClip();
         clip.open(ais);
         clip.loop(1);
